--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bentolio",
+  "name": "meshal.me",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.456.0",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18"
